# fCWTr

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  cran-comments.md  fCWTr.Rproj  fcwtr.Rproj  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: RcppExports.R  cpp11.R  data.R  fcwt.R  fcwt_batch.R  fcwt_bulk_df.R  fcwt_df.R  fcwtr-package.R  fcwtr_scalogram.R  fcwtr_spectogram.R  helper.R  openmp.R  opt_schemes.R  plot.fcwt_df.R  sigma.R  sys_support.R  units.R  wnd.R  zzz.R
articles/: index.html  sigma.html
data/: time_series_sin.rda  ts_piano_sample.rda  ts_sin_sin.rda
data-raw/: hex-logo-colour.R  hex-logo.R  time_series_sin.R  ts_piano_sample.R  ts_sin.R
man/: as.data.frame.fcwtr_scalogram.Rd  as.matrix.fcwtr_scalogram.Rd  as_tibble.fcwtr_scalogram.Rd  autoplot.fcwtr_scalogram.Rd  avx_enabled.Rd  create_opt_schemes.Rd  create_opt_schemes_raw.Rd  create_optimization_schemes_raw.Rd  du.Rd  fcwt.Rd  fcwt_batch.Rd  fcwt_bulk_df.Rd  fcwt_df.Rd  fcwt_raw.Rd  fcwtr.Rd  openmp_enabled.Rd  plot.fcwt_df.Rd  plot.fcwtr_scalogram.Rd  print.fcwtr_scalogram.Rd  rbind.fcwtr_scalogram.Rd  sigma_freq_res_rel.Rd  sigma_from_freq_res.Rd  sigma_from_freq_res_rel.Rd  sigma_from_frequency_resolution.Rd  sigma_from_time_res.Rd  sigma_from_time_resolution.Rd  sigma_res.Rd  sigma_resolution.Rd  sub-.fcwtr_scalogram.Rd  time_series_sin.Rd  ts_piano_sample.Rd  ts_sin_440.Rd  ts_sin_sin.Rd  ts_sin_superpos.Rd  u.Rd
news/: index.html
reference/: as.data.frame.fcwtr_scalogram.html  as.matrix.fcwtr_scalogram.html  as_tibble.fcwtr_scalogram.html  autoplot.fcwtr_scalogram.html  avx_enabled.html  du.html  fcwt.html  fcwt_batch.html  index.html  openmp_enabled.html  plot.fcwtr_scalogram.html  print.fcwtr_scalogram.html  rbind.fcwtr_scalogram.html  sigma_freq_res_rel.html  sigma_from_freq_res.html  sigma_from_freq_res_rel.html  sigma_from_frequency_resolution.html  sigma_from_time_res.html  sigma_from_time_resolution.html  sigma_res.html  sigma_resolution.html  sub-.fcwtr_scalogram.html  ts_piano_sample.html  ts_sin_440.html  ts_sin_sin.html  ts_sin_superpos.html  u.html
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  abs.cpp  abs.h  cpp11.cpp  fcwt.cpp  fcwt.h  interface_fcwt.cpp
tests/: testthat.R
tests/testthat/: test-fcwt.R  test-fcwt_batch.R  test-fcwt_df.R  test-fcwtr_scalogram.R  test-openmp.R  test-sigma.R  test-sys_support.R  test-units.R  test-wnd.R
tests/testthat/_snaps/: fcwt.md
vignettes/: sigma.Rmd
